--- a/paper.tex
+++ b/paper.tex
@@ -166,67 +166,52 @@ population, the CRp population required in the best-studied case of
 the Coma cluster must have a very broad and flat (or even slightly
 inverted) spatial profile \citep{brunetti12}, in contrast with the
 thermal plasma whose energy density declines steeply with radius. In
-\AP{the left panel of} Fig.~\ref{fig:Edens} we show that such a
+the left panel of Fig.~\ref{fig:Edens} we show that such a
 distribution is not predicted by cosmological simulations \cite[see
-  also][]{pinzke10,2014MNRAS.439.2662V}. \CP{If CRps are predominantly
-  advected with the cluster plasma, their distribution will be peaked
-  towards the cluster center and shows a similar characteristics as
-  the thermal plasma. As a consequence, the distribution of secondary
-  electrons and the resulting radio synchrotron emission is also
-  peaked since the hadronic reaction is a two-body scattering process
-  (see Fig.~Fig.~\ref{fig:Edens}). Hence, the simulated emission falls
-  short of the observed extended and flat radio profile of the Coma
-  cluster.}
+  also][]{pinzke10,2014MNRAS.439.2662V}. If CRps are predominantly
+advected with the cluster plasma, their distribution will be peaked
+towards the cluster center and shows a similar characteristics as the
+thermal plasma. As a consequence, the distribution of secondary
+electrons and the resulting radio synchrotron emission is also peaked
+since the hadronic reaction is a two-body scattering process (see
+Fig.~Fig.~\ref{fig:Edens}). Hence, the simulated emission falls short
+of the observed extended and flat radio profile of the Coma cluster.
 
 \begin{figure*}
   \includegraphics[width=1.0\columnwidth]{fCR.radius.coma.g72a.Rad14.2400p.z0.NL.xKR.eb23.eI067.DII.140.v6.eps}
-  \includegraphics[width=1.0\columnwidth]{turb_profile_ratio_tot.eps}
-  \caption{Left: spatial distribution of CRp energy density in the
-    Coma cluster. The red dash-dotted line shows the required
-    distribution of seed CRps that generate secondary electrons via
-    p-p collisions required to reproduce Coma radio brightness
-    observations after Fermi-II reacceleration \citep{brunetti12}. The
-    blue solid line shows the distribution of fossil CRps found in
-    cosmological simulations, which disagrees with the required
-    profile. \AP{To better compare the two models in this figure, we
-      normalize the required distribution of CRps by fixing the total
-      CRp energy $E_\rmn{CR}$ to 0.3 percent of the total thermal
-      energy, consistent with observations
-      \citep{2014ApJ...787...18A,2012ApJ...757..123A}. Right: the
-      ratio of turbulent-to-thermal energy densities (solid lines) and
-      cumulative energies (dotted lines) in our three models. The
-      energy densities are parametrized as $\epsilon_\rmn{turb}
-      \propto \epsilon_\rmn{th}^{(\alpha_{\rmn{tu}}+1)/2}/T^{1/4}$ and
-      normalized such that the total turbulent energy in compressible
-      modes $E_\rmn{turb}$ for each scenario makes up about 6\% of the
-      total thermal energy $E_\rmn{th}$ inside the radio halo
-      ($R_\rmn{RH}\approx0.6R_{200}$). The turbulent profiles explore
-      the uncertainty in the cluster turbulence and are motivated by
-      the cosmological simulation in
-      \citep{2009ApJ...705.1129L,2010ApJ...725.1452S,2011A&A...529A..17V}.}}
+  \caption{Spatial distribution of CRp energy density in the Coma
+    cluster. The red dash-dotted line shows the required distribution
+    of seed CRps that generate secondary electrons via p-p collisions
+    required to reproduce Coma radio brightness observations after
+    Fermi-II reacceleration \citep{brunetti12}. The blue solid line
+    shows the distribution of fossil CRps found in cosmological
+    simulations, which disagrees with the required profile. To better
+    compare the two models in this figure, we normalize the required
+    distribution of CRps by fixing the total CRp energy $E_\rmn{CR}$
+    to 0.3 percent of the total thermal energy, consistent with
+    observations \citep{2014ApJ...787...18A,2012ApJ...757..123A}.}
   \label{fig:Edens}
 \end{figure*}
 
 Indeed, arriving at a seed population with the required
 characteristics is highly constraining, and has the potential to teach
-us much about the origin of CRps/CRes in clusters.  \CP{In this work,
-  we use our hydrodynamical zoom simulations of galaxy clusters in a
-  cosmological setting to follow the distribution functions of seed
-  CRp and CRe population and integrate the Fokker-Planck equation of
-  CR transport along Lagrangian particle trajectories. We resolve
-  injection at structure formation shocks, account for various loss
-  processes of CRs, and -- most importantly -- model second-order
-  Fermi acceleration by CR interactions with magnetised
-  turbulence. However, we assume a simplified and stationary model for
-  magnetic fields and turbulence. We do not account for the
-  time-varying energy density in compressible waves, which are thought
-  to be necessary for the acceleration process
-  \citep{brunetti07,brunetti11}, as the cluster merger proceeds.  So
-  our approach is orthogonal (and complementary) to e.g.,
-  \citealp{2015ApJ...800...60M}. This enables us to vary parameters
-  associated with the unknown continuation of magneto-hydrodynamical
-  turbulence below the MHD scale and the overall amplitude of
-  compressible waves.}
+us much about the origin of CRps/CRes in clusters.  In this work, we
+use our hydrodynamical zoom simulations of galaxy clusters in a
+cosmological setting to follow the distribution functions of seed CRp
+and CRe population and integrate the Fokker-Planck equation of CR
+transport along Lagrangian particle trajectories. We resolve injection
+at structure formation shocks, account for various loss processes of
+CRs, and -- most importantly -- model second-order Fermi acceleration
+by CR interactions with magnetised turbulence. However, we assume a
+simplified and stationary model for magnetic fields and turbulence. We
+do not account for the time-varying energy density in compressible
+waves, which are thought to be necessary for the acceleration process
+\citep{brunetti07,brunetti11}, as the cluster merger proceeds.  So our
+approach is orthogonal (and complementary) to e.g.,
+\citealp{2015ApJ...800...60M}. This enables us to vary parameters
+associated with the unknown continuation of magneto-hydrodynamical
+turbulence below the MHD scale and the overall amplitude of
+compressible waves.
 
 In this paper we consider three new scenarios that
 individually or combined can reproduce the observed radio profiles and
@@ -252,16 +237,16 @@ simulations of CRs in clusters. In tandem with new insights from our
 recent work on DSA generated fossil electrons \citep{pinzke13}, we
 generate the first quantitative calculation of primary and secondary
 seed electrons and compare to observations in the Coma cluster. For
-the most part, we adopt parameters that are used in previous work:
-\AP{for details, see \citep[][ turbulent
-    spectrum]{brunetti07,brunetti11}, \citep[][ injection scale of
-    turbulens]{2015ApJ...800...60M}, \citep[][ energy density of
-    turbulence]{2009ApJ...705.1129L,2010ApJ...725.1452S,2011A&A...529A..17V},
-  for CR acceleration in shocks, \citep[][ in particular
-    $K_{\rmn{ep}}$, acceleration efficiency]{pinzke13}, and for
-  cosmological simulations, \citep[][ i.e., shock history, temperature
-    profile, density profile, magnetic field profile]{pinzke10}.} All
-these parameters are uncertain, and could potentially change our
+the most part, we adopt parameters that are used in previous work: for
+details, see \citep[][ turbulent spectrum]{brunetti07,brunetti11},
+\citep[][ injection scale of turbulens]{2015ApJ...800...60M},
+\citep[][ energy density of
+  turbulence]{2009ApJ...705.1129L,2010ApJ...725.1452S,2011A&A...529A..17V},
+for CR acceleration in shocks, \citep[][ in particular $K_{\rmn{ep}}$,
+  acceleration efficiency]{pinzke13}, and for cosmological
+simulations, \citep[][ i.e., shock history, temperature profile,
+  density profile, magnetic field profile]{pinzke10}. All these
+parameters are uncertain, and could potentially change our
 predictions. We leave exploration of parameter space and the
 interaction between free parameters to future work.
 
@@ -343,40 +328,38 @@ velocity, $|dp/dt|$ represents radiative (r) and Coulomb (C) losses,
 $D_{pp}$ is the momentum space diffusion coefficient, and
 $Q_{\rmn{e}}$ denotes the injection rate of primary and secondary
 electrons in the ICM. The $\bnabla\bcdot \bvel$ terms represent
-adiabatic gains and losses \AP{and the $\bnabla\bcdot
-  \vec{F}_\rmn{stream}$ terms represent super-Alfv{\'e}nic CR
-  streaming. For details about $F_\rmn{stream}$ please see
-  \citet{wiener13}.} During post-processing of our Coma-like cluster
+adiabatic gains and losses and the $\bnabla\bcdot
+\vec{F}_\rmn{stream}$ terms represent super-Alfv{\'e}nic CR
+streaming. For details about $F_\rmn{stream}$ please see
+\citet{wiener13}. During post-processing of our Coma-like cluster
 simulation, we solve the Fokker-Planck equation over a redshift
 interval from $z=5$ to 0. The simulated cluster undergoes a major
-merger over the last 1-2~Gyrs that \AP{is thought to inject large
-  turbulent eddies. Following \citet{brunetti07,brunetti11} \citep[see
-    also][]{2004ApJ...614..757Y,2015ApJ...800...60M} we assume that
-  about one Gyr after core passage the fields have decayed down to the
-  smallest scales where reacceleration is most efficient ($D_{pp}\sim
-  k_\rmn{cut}$) and the radio halo turns on shortly after. Note that
-  the exact decay time of the turbulens is of minor importance, since
-  the thermal and CR quantities are very similar a few 100 Myrs before
-  and after $z=0$ where we have chosen to evaluate the simulations.}
-\sout{injects large turbulent eddies. After about 1~Gyr those have
-  decayed down to the scale needed to reaccelerate particles.} This
+merger over the last 1-2~Gyrs that is thought to inject large
+turbulent eddies. Following \citet{brunetti07,brunetti11} \citep[see
+  also][]{2004ApJ...614..757Y,2015ApJ...800...60M} we assume that
+about one Gyr after core passage the fields have decayed down to the
+smallest scales where reacceleration is most efficient ($D_{pp}\sim
+k_\rmn{cut}$) and the radio halo turns on shortly after. Note that the
+exact decay time of the turbulens is of minor importance, since the
+thermal and CR quantities are very similar a few 100 Myrs before and
+after $z=0$ where we have chosen to evaluate the simulations. This
 delay naturally explains why giant radio halos are only seen in a
 fraction of all merging clusters. In all our calculations we assume
 that turbulent reacceleration efficiently accelerates particles for
-$\tau_D\sim650$~Myrs (which is roughly the cascade time on which
+$\tau_\rmn{cl}\sim650$~Myrs (which is roughly the cascade time on which
 turbulence is damped) and that during this turbulent phase CR
 streaming and spatial diffusion can be neglected. In our \Mstream
 model, CR streaming and diffusion are incorporated separately during
 kinematically quiescent times that precede the merger. As a result,
 flat CRp profiles are produced on relatively short timescales ($\sim
-0.1-0.5$ Gyr). \AP{This allows us to implicitly solve for CR streaming
-  in our calculations, where we adopt a toy model that enforce a flat
-  CRp profile at all quiescent times \citep{wiener13}. We assume that
-  CRs cannot stream significantly past perpendicular $B$-fields at the
-  accretion shock, so that the total number of CRs is conserved within
-  the virial radius during the streaming process. Finally, since
-  streaming is much more efficient for the CRps, we can ignore this
-  effect for the CRes.}
+0.1-0.5$ Gyr). This allows us to implicitly solve for CR streaming in
+our calculations, where we adopt a toy model that enforce a flat CRp
+profile at all quiescent times \citep{wiener13}. We assume that CRs
+cannot stream significantly past perpendicular $B$-fields at the
+accretion shock, so that the total number of CRs is conserved within
+the virial radius during the streaming process. Finally, since
+streaming is much more efficient for the CRps, we can ignore this
+effect for the CRes.
 
 The time evolution of the spectral energy distribution of CRps,
 $f_{\rmn{p}}$, is similarly given by:
@@ -459,10 +442,10 @@ p^2/4D_{pp}$, that is typically few 100 Myrs in the ICM (see
 Tab.~\ref{tab:timescales} for more details).
 
 
-\AP{We focus on a scenario where the turbulence is injected at the
-  largest scale that is driven by the merging cluster and accreting
-  matter. The diffusion equation for isotropic MHD turbulence in
-  $k$--space is given by}
+We focus on a scenario where the turbulence is injected at the largest
+scale that is driven by the merging cluster and accreting matter. The
+diffusion equation for isotropic MHD turbulence in $k$--space is given
+by
 \begin{eqnarray}
 &{{\partial {\mathcal W}(k,t) }\over{\partial t}}
 =
@@ -477,55 +460,48 @@ k^2 D_{kk}
 &
 \label{modes_kinetic}
 \end{eqnarray}
-\AP{where we assume that the volumetric injection rate of turbulence
-  $I(k,t)$ is constant over time with a fixed rate $I_0$ so that
-  $I(k,t) \equiv I(k) = I_0\,\delta (k - k_o)$. The different damping
-  terms are given by $\Gamma_i(k,t)$ and $D_{kk}$ is the wave--wave diffusion
-  coefficient of magnetosonic waves in the $k$--space represented by
-  \begin{equation}
-    \label{eq:Dkk}
-    D_{kk} \approx \Vph k^4
-    \left(\frac{\mathcal{W}(k)}{\rho\,\Vph^2}\right)\,.
-  \end{equation}
-}
+where we assume that the volumetric injection rate of turbulence
+$I(k,t)$ is constant over time with a fixed rate $I_0$ so that $I(k,t)
+\equiv I(k) = I_0\,\delta (k - k_o)$. The different damping terms are
+given by $\Gamma_i(k,t)$ and $D_{kk}$ is the wave--wave diffusion
+coefficient of magnetosonic waves in the $k$--space represented by
+\begin{equation}
+  \label{eq:Dkk}
+  D_{kk} \approx \Vph k^4
+  \left(\frac{\mathcal{W}(k)}{\rho\,\Vph^2}\right)\,.
+\end{equation}
 
-We adopt a simplified isotropic MHD turbulent spectrum \AP{based on
-Kraichnan's picture} for the fast modes per elemental range $dk$ of
-  the form
+
+We adopt a simplified isotropic MHD turbulent spectrum based on
+Kraichnan's picture for the fast modes per elemental range $dk$ of the
+form
 \begin{equation}
   \label{eq:Wk}
   \mathcal{W}(k) =
 \sqrt{2/7\,I_0\,\rho\,\langle \Vph \rangle}\,k^{-3/2},
 \end{equation}
-for $k_0<k<k_\rmn{cut}$. \AP{Here we adopt an injection scale of the
-  turbulence, $k_0= 2\pi/(1~\mbox{Mpc})$, motivated by recent
-  state-of-art simulations
-  \citep{2009A&A...504...33V,2011A&A...529A..17V,2015ApJ...800...60M}. \sout{At
-    the same time we note that there is a large uncertainty in $k_0$,
-    that is degenerate with the level of turbulence in compressible
-    modes ($X_\rmn{tu}$) which is also highly uncertain. Increasing
-    one of the parameters, allow us to decrease the other in order to
-    keep $D_{pp}$ at the value needed to explain
-    observations.}}\sout{, where we assume an injection scale for the
-  turbulence, $k_0= 2\pi/(100~\mbox{kpc})$.} \AP{The profile of
-  injected turbulence is also highly uncertain, however we assume it
-  correlates to the thermal energy density to some power of the
-  merging clusters. Hence we assume volumetric injection rate of
-  turbulent energy, $I_0\propto \epsilon_\rmn{th}^{\alpha_\rmn{tu}}$,
-  and determine the normalization by requiring that the turbulent
-  energy in compressible modes $E_\rmn{turb}=\int \int \mathcal{W}(k)
-  \rmn{d}k \rmn{d}V = X_\rmn{tu} E_\rmn{th}$, where $E_\rmn{th}$ is
-  the total thermal energy. We adopt a turbulent energy
-  ratio\footnote{Simulations show that the compressible modes
-    contribute a factor $0.2-0.4$ to the total turbulent energy
-    \citep{2013ApJ...771..131B,2015ApJ...800...60M}. Furthermore, the
-    total turbulent energy is typically $10-30$\% of the thermal
-    energy in a cluster which is in agreement with our adopted value
-    of $X_\rmn{tu}$.}  $X_\rmn{tu}=0.06$ within the radio halo.} In
-this work we investigate different spatial models for injected
+for $k_0<k<k_\rmn{cut}$. Here we adopt an injection scale of the
+turbulence, $k_0= 2\pi/(1~\mbox{Mpc})$, motivated by recent
+state-of-art simulations
+\citep{2009A&A...504...33V,2011A&A...529A..17V,2015ApJ...800...60M}.
+The profile of injected turbulence is also highly uncertain, however
+we assume it correlates to the thermal energy density to some power of
+the merging clusters. Hence we assume volumetric injection rate of
+turbulent energy, $I_0\propto \epsilon_\rmn{th}^{\alpha_\rmn{tu}}$,
+and determine the normalization by requiring that the turbulent energy
+in compressible modes $E_\rmn{turb}=\int \int \mathcal{W}(k) \rmn{d}k
+\rmn{d}V = X_\rmn{tu} E_\rmn{th}$, where $E_\rmn{th}$ is the total
+thermal energy. We adopt a turbulent energy ratio\footnote{Simulations
+  show that the compressible modes contribute a factor $0.2-0.4$ to
+  the total turbulent energy
+  \citep{2013ApJ...771..131B,2015ApJ...800...60M}. Furthermore, the
+  total turbulent energy is typically $10-30$\% of the thermal energy
+  in a cluster which is in agreement with our adopted value of
+  $X_\rmn{tu}$.}  $X_\rmn{tu}=0.06$ within the radio halo. In this
+work we investigate different spatial models for injected
 turbulence. With the above choice of normalization, the turbulent
 energy density becomes $\epsilon_\rmn{turb} \propto
-\epsilon_\rmn{th}^{\alpha_\rmn{tu}}/T^{1/4}$, where $T$ is the
+\epsilon_\rmn{th}^{(\alpha_\rmn{tu}+1)/2}/T^{1/4}$, where $T$ is the
 temperature of the gas, $\alpha_\rmn{tu}= 0.67$ for \Mflatturb,
 $\alpha_\rmn{tu}= 0.82$ for \Mstream, and $\alpha_\rmn{tu}= 0.88$ for
 \Mprimary. Note that in previous work on the Coma cluster,
@@ -571,14 +547,31 @@ magnetic field strengths derived from Faraday rotation observations of
 Coma \citep{bonafede10} in combination with the density profile
 derived from X-ray measurements \citep{1992A&A...259L..31B}.
 
-\AP{For reference we show in Table~\ref{tab:timescales} both the thermal
-  quantities and the timescales for CR cooling and (re)acceleration
-  for three different spatial regions of the RH. Interestingly the
-  reacceleration timescale $\tau_D$ is very similar between our three
-  models, where the difference comes from turbulent profile
-  parameterized with $\alpha_\rmn{tu}$. This implies that even small
-  differences in the turbulent profile could impact the seed CRs
-  significantly.}
+\begin{figure*}
+  \includegraphics[width=1.0\columnwidth]{turb_profile_ratio_tot.eps}
+  \caption{The ratio of turbulent-to-thermal energy densities (solid
+    lines) and cumulative energies (dotted lines) in our three
+    models. The energy densities are parametrized as
+    $\epsilon_\rmn{turb} \propto
+    \epsilon_\rmn{th}^{(\alpha_{\rmn{tu}}+1)/2}/T^{1/4}$ and
+    normalized such that the total turbulent energy in compressible
+    modes $E_\rmn{turb}$ for each scenario makes up about 6\% of the
+    total thermal energy $E_\rmn{th}$ inside the radio halo
+    ($R_\rmn{RH}\approx0.6R_{200}$). The turbulent profiles explore
+    the uncertainty in the cluster turbulence and are motivated by the
+    cosmological simulation in
+    \citep{2009ApJ...705.1129L,2010ApJ...725.1452S,2011A&A...529A..17V}.}
+  \label{fig:Edens}
+\end{figure*}
+
+For reference we show in Table~\ref{tab:timescales} both the thermal
+quantities and the timescales for CR cooling and (re)acceleration for
+three different spatial regions of the RH. Interestingly the
+reacceleration timescale $\tau_D$ is very similar between our three
+models, where the difference comes from turbulent profile
+parameterized with $\alpha_\rmn{tu}$. This implies that even small
+differences in the turbulent profile could impact the seed CRs
+significantly.
 
 \begin{table}
   \caption{Thermal quantities and timescales for different spatial
@@ -631,31 +624,31 @@ density and temperature profiles are all similar to the well studied
 Coma cluster \citep{2007MNRAS.378..385P,pinzke10}, we will compare our
 calculations to radio and gamma-ray observations of Coma.
 
-\AP{We use a simple test-particle model for the CR acceleration and
-  injection, where each shock inject CRs that trace a power-law in
-  momentum,
-  \begin{equation}
-    f(p,t) = C(t)\,p^{\alpha_\rmn{inj}}\,,
-  \end{equation}
-  determined by the normalization $C(t)$ and the spectral index
-  $\alpha_\rmn{inj}=\frac{(\gamma_\rmn{ad}+1)\mathcal{M}^2}{(\gamma_\rmn{ad}-1)\mathcal{M}^2+2}$
-  that depends on the adiabatic index $\gamma_\rmn{ad} = 5/3$ and the
-  Mach number of the shock $\mathcal{M}$. It is given by the ratio of
-  the upstream velocity ($u_2$) and the sound speed ($c_s$). The CR
-  number density and CR energy density are derived from $n_\rmn{CR} =
-  \int_{p_\rmn{inj}}^\infty \dd p\, f(p)$ and $\epsilon_\rmn{CR} =
-  \int_{p_\rmn{inj}}^\infty \dd p\, f(p) \,T(p)$, respectively, where
-  $T(p) = (\sqrt{1+p^2} -1)\, m\,c^2$ is the kinetic energy of a
-  particle with momentum $p$. We adopt a fit to Monte Carlo
-  simulations of the thermal leakage process that relates the momentum
-  of injected protons ($p_\rmn{inj}$) to the thermal energy
-  ($p_\rmn{th}$) of the shocked plasma \citep{kang11}:
-  \begin{eqnarray}
+We use a simple test-particle model for the CR acceleration and
+injection, where each shock inject CRs that trace a power-law in
+momentum,
+\begin{equation}
+  f(p,t) = C(t)\,p^{\alpha_\rmn{inj}}\,,
+\end{equation}
+determined by the normalization $C(t)$ and the spectral index
+$\alpha_\rmn{inj}=\frac{(\gamma_\rmn{ad}+1)\mathcal{M}^2}{(\gamma_\rmn{ad}-1)\mathcal{M}^2+2}$
+that depends on the adiabatic index $\gamma_\rmn{ad} = 5/3$ and the
+Mach number of the shock $\mathcal{M}$. It is given by the ratio of
+the upstream velocity ($u_2$) and the sound speed ($c_s$). The CR
+number density and CR energy density are derived from $n_\rmn{CR} =
+\int_{p_\rmn{inj}}^\infty \dd p\, f(p)$ and $\epsilon_\rmn{CR} =
+\int_{p_\rmn{inj}}^\infty \dd p\, f(p) \,T(p)$, respectively, where
+$T(p) = (\sqrt{1+p^2} -1)\, m\,c^2$ is the kinetic energy of a
+particle with momentum $p$. We adopt a fit to Monte Carlo
+simulations of the thermal leakage process that relates the momentum
+of injected protons ($p_\rmn{inj}$) to the thermal energy
+($p_\rmn{th}$) of the shocked plasma \citep{kang11}:
+\begin{eqnarray}
   \label{eq:qinj}
   p_\rmn{inj} &=& x_\rmn{inj} p_\rmn{th} = x_\rmn{inj} \sqrt{\frac{2 \,k T_2}{m c^2}}\,, \nonumber \\
   \rmn{where}\quad x_\rmn{inj} &\approx& 1.17 \frac{u_2}{p_{\rmn th}\,c} \left(1+
   \frac{1.07}{\epsilon_B}\right) \left(\frac{\mathcal{M}}{3}\right)^{0.1}\,.
-  \end{eqnarray}
+\end{eqnarray}
 Here $\eb = B_0/B_{\perp}$, $B_0$ is the amplitude of the downstream
 MHD wave turbulence, and $B_{\perp}$ is the magnetic field along the
 shock normal. The physical range of $\eb$ is quite uncertain due to
@@ -692,32 +685,32 @@ and the CR energy injection and acceleration efficiency is:
 The dissipated energy density in the downstream regime,
 $\Delta\epsilon_\rmn{diss}$, is given by the difference of the thermal
 energy densities in the pre- and post-shock regimes, corrected for the
-adiabatic energy increase due to gas compression.}
+adiabatic energy increase due to gas compression.
 
-\AP{We limit the acceleration efficiency to $\zeta_{\rmn max}$ by
-  steepening the spectral index of the injected population
-  $\alpha_\rmn{inj}$ to $\alpha_\rmn{sub}$ so that $\zeta_{\rmn lin}
-  \leq \zeta_{\rmn max}$ is always fulfilled. The slope
-  $\alpha_\rmn{inj}$ impact $\zeta_{\rmn inj}$ via the mean energy per
-  particle given by $T_\rmn{CR} = \epsilon_\rmn{CR}/n_\rmn{CR}$. This
-  procedure conserves energy and is motivated by models of non-linear
-  shock acceleration where a sub-shock with a lower compression ratio
-  (and hence steeper spectral index) forms
-  \citep[e.g.,][]{2000ApJ...540..292E}. Given our assumed $\eb=0.23$,
-  we find that for strong shocks where $\alpha \lesssim 2.3$ the
-  spectral slope is steepened by a maximum of $\sim 10$ per cent in
-  low temperature regimes ($kT\sim 0.1$~keV), while the steepening is
-  much smaller for high temperature regimes ($kT\sim 10$~keV) that are
-  more relevant for clusters. Since $p_{\rm inj}$ remains fixed, so
-  does the CR number density $n_\rmn{CR}$. Hence we can solve for the
-  renormalized normalization constant $C_\rmn{sub}$ using $n_\rmn{CR}$
-  and Eqn.~\ref{eq:eta}:
+We limit the acceleration efficiency to $\zeta_{\rmn max}$ by
+steepening the spectral index of the injected population
+$\alpha_\rmn{inj}$ to $\alpha_\rmn{sub}$ so that $\zeta_{\rmn lin}
+\leq \zeta_{\rmn max}$ is always fulfilled. The slope
+$\alpha_\rmn{inj}$ impact $\zeta_{\rmn inj}$ via the mean energy per
+particle given by $T_\rmn{CR} = \epsilon_\rmn{CR}/n_\rmn{CR}$. This
+procedure conserves energy and is motivated by models of non-linear
+shock acceleration where a sub-shock with a lower compression ratio
+(and hence steeper spectral index) forms
+\citep[e.g.,][]{2000ApJ...540..292E}. Given our assumed $\eb=0.23$, we
+find that for strong shocks where $\alpha \lesssim 2.3$ the spectral
+slope is steepened by a maximum of $\sim 10$ per cent in low
+temperature regimes ($kT\sim 0.1$~keV), while the steepening is much
+smaller for high temperature regimes ($kT\sim 10$~keV) that are more
+relevant for clusters. Since $p_{\rm inj}$ remains fixed, so does the
+CR number density $n_\rmn{CR}$. Hence we can solve for the
+renormalized normalization constant $C_\rmn{sub}$ using $n_\rmn{CR}$
+and Eqn.~\ref{eq:eta}:
 \begin{equation}
   \label{eq:Cp_sub}
   C_\rmn{sub}=\eta_\rmn{CR,lin}\,(\alpha_\rmn{sub}-1)\,p_\rmn{inj}^{\alpha_\rmn{sub}-1}\,,
 \end{equation}
 where the new distribution function is given by $f(p,t)= C_\rmn{sub}
-p^{-\alpha_\rmn{sub}}$.} We set an upper limit on the ratio of
+p^{-\alpha_\rmn{sub}}$. We set an upper limit on the ratio of
 accelerated proton-to-dissipated energy in the downstream of strong
 shocks that varies from $\zeta_{\rmn max} \sim 1-10\%$, depending on
 the adopted model (for more details, see Section \ref{sec:results}).
@@ -731,75 +724,104 @@ accelerated at perpendicular shocks
 \citep{2014ApJ...794..153G,2014ApJ...797...47G}, and ions efficiently
 accelerated at parallel shocks \citep{2014ApJ...783...91C}. Thus,
 depending on magnetic geometry, $K_{\rmn{ep}}$ could be either larger
-or smaller. \sout{In order not to violate energy conservation with a
-  fixed limit for the acceleration efficiency, we steepen the spectral
-  index of the accelerated CRps at the limit %\citep{pinzke13}
-, which  mimics the non-linear CR modification of the shock
-  %\citep{ellison00}
-  . For weak shocks the efficiency is a factor 10-100
-  lower and well below the limit.} Some observations of radio relics
-suggest high values of $K_{\rmn{ep}}$, due to the absence of gamma-ray
-emission, which probes the CRp population
-\citep{2014MNRAS.437.2291V}. This suggests primary CRes as a viable
-alternative scenario to secondary CRes as seeds for the giant RHs. In
-our {\em M-primaries} scenario, the injected distribution of CRes is
-derived in the same way as for the CRps. Once they have been
-accelerated to relativistic energies, injected electrons and protons
-are indistinguishable. We therefore assume that CRp and CRe have the
-same distribution function $f_\rmn{CRe}(p) = K_\rmn{ep}
-f_\rmn{CRp}(p)$, with a different normalization (due to differing
-acceleration efficiencies) $K_\rmn{ep}=0.1$ \citep[which is viable for
-  primarily perpendicular shocks][]{2014ApJ...794..153G}. While this
-appears to contradict the radial bias of magnetic fields in the bulk
-of the ICM as suggested by observations \citep{2010NatPh...6..520P}
-and cluster simulations \citep{2011ApJ...740...81R}, it does not
-necessarily apply to the accretion shock regions, which show a field
-geometry with a net perpendicular bias with respect to the shock
-normal---at least for giant radio relics \citep{2010Sci...330..347V}.
+or smaller. Some observations of radio relics suggest high values of
+$K_{\rmn{ep}}$, due to the absence of gamma-ray emission, which probes
+the CRp population \citep{2014MNRAS.437.2291V}. This suggests primary
+CRes as a viable alternative scenario to secondary CRes as seeds for
+the giant RHs. In our {\em M-primaries} scenario, the injected
+distribution of CRes is derived in the same way as for the CRps. Once
+they have been accelerated to relativistic energies, injected
+electrons and protons are indistinguishable. We therefore assume that
+CRp and CRe have the same distribution function $f_\rmn{CRe}(p) =
+K_\rmn{ep} f_\rmn{CRp}(p)$, with a different normalization (due to
+differing acceleration efficiencies) $K_\rmn{ep}=0.1$ \citep[which is
+  viable for primarily perpendicular
+  shocks][]{2014ApJ...794..153G}. While this appears to contradict the
+radial bias of magnetic fields in the bulk of the ICM as suggested by
+observations \citep{2010NatPh...6..520P} and cluster simulations
+\citep{2011ApJ...740...81R}, it does not necessarily apply to the
+accretion shock regions, which show a field geometry with a net
+perpendicular bias with respect to the shock normal---at least for
+giant radio relics \citep{2010Sci...330..347V}.
 
 
 % --- section: Analytical Results and discussion --- %
 
 \section{Parameter space exploration with spherical models}
-
+...
+\begin{figure*}
+\begin{minipage}{1\columnwidth}
+   \begin{center}\Large{Radio profiles}\\
+     \includegraphics[width=\columnwidth]{prof.comp.Xtu.eps}
+   \end{center}
+\end{minipage}
+\begin{minipage}{1\columnwidth}
+   \begin{center}\Large{Radio spectra}\\
+     \includegraphics[width=\columnwidth]{spec.comp.Xtu.eps}
+   \end{center}
+\end{minipage}
+\\
+\begin{minipage}{1\columnwidth}
+  \begin{center}%\Large{\Mflatturb:}\\ 
+    \includegraphics[width=\columnwidth]{prof.comp.aCR.eps}
+  \end{center}
+\end{minipage}
+\begin{minipage}{1\columnwidth}
+   \begin{center}%\Large{\it Brunetti et al. (2012)}:\\
+     \includegraphics[width=\columnwidth]{spec.comp.aCR.eps}
+   \end{center}
+\end{minipage}
+\\
+\begin{minipage}{1\columnwidth}
+  \begin{center}%\Large{\Mflatturb:}\\ 
+    \includegraphics[width=\columnwidth]{prof.comp.aI0.eps}
+  \end{center}
+\end{minipage}
+\begin{minipage}{1\columnwidth}
+   \begin{center}%\Large{\it Brunetti et al. (2012)}:\\
+     \includegraphics[width=\columnwidth]{spec.comp.aI0.eps}
+   \end{center}
+\end{minipage}
+\caption{...}
+  \label{fig:param_comp}
+\end{figure*}
 
 
 % --- section: Simulation Results and discussion --- %
 
 \section{Results of cosmological simulations}
 \label{sec:results}
-\AP{In this section we show that our three models individually
-  reproduce the observed Coma radio halo without violating gamma-ray
-  bounds. The level of emission is mainly driven by how efficient the
-  CRs are reaccelerated and for how long. The diffusion constant,
-  $D_\rmn{pp}\propto I_0/\rho c_s \propto
-  X_\rmn{tu}^2k_0\epsilon_\rmn{tu}^{\alpha_\rmn{tu}-1}\sqrt{T}$, where
-  we adopt the same level of compressible turbulence,
-  $X_\rmn{tu}=0.06$, for all models. The reaccelerated CRs are
-  super-exponentially dependent on this parameter as long as $\tau_D >
-  \tau_\rmn{cl}$, where $\tau_\rmn{cl}$ represent the duration of
-  reacceleration of the merger which we assume to be 650~Myrs
-  long. Note that  fixing $D_\rmn{pp}$ allows us to relate
-  $\tau_\rmn{cl} \propto X_\rmn{tu}^2 \propto k_0$ that ultimately sets
-  the normalization for $D_\rmn{pp}$. We also exploit the large
-  uncertainty in the turbulent profile and adjust $\alpha_\rmn{tu}$
-  for each model so that the CRs have the correct spatial profile to
-  match the radio emission. The shape of the spectrum for each of
-  model is more complicated and is determined both from reacceleration
-  and as well as the gains and losses during the formation of the
-  cluster. It depends only weakly on the specifics of the CR injection
-  at the shocks (where the Mach number distribution of the shocks is
-  the most important quantity). The normalization of the spectrum is
-  mainly determined from the maximum acceleration efficiency (together
-  with the uncertain parameters $X_\rmn{tu}$, $\tau_\rmn{cl}$, and
-  $k_0$). Given the freedom in the turbulens, it might not be
-  surprising that we match the radio profile in Coma. Although,
-  matching the spectrum without violating gamma-ray bounds for each of
-  our three models is more surprising and is not a consequence of
-  parameter fitting. We believe that it is ultimately a consequence of
-  the adopted physics and hint that reacceleration is a viable
-  explanation for giant radio halos. Below we discuss in more detail
-  the different emission components of Coma.}
+In this section we show that our three models individually reproduce
+the observed Coma radio halo without violating gamma-ray bounds. The
+level of emission is mainly driven by how efficient the CRs are
+reaccelerated and for how long. The diffusion constant,
+$D_\rmn{pp}\propto I_0/\rho c_s \propto
+X_\rmn{tu}^2k_0\epsilon_\rmn{th}^{\alpha_\rmn{tu}-1}\sqrt{T}$, where
+we adopt the same level of compressible turbulence, $X_\rmn{tu}=0.06$,
+for all models. The reaccelerated CRs are super-exponentially
+dependent on this parameter as long as $\tau_D > \tau_\rmn{cl}$, where
+$\tau_\rmn{cl}$ represent the duration of reacceleration of the merger
+which we assume to be 650~Myrs long. Note that fixing $D_\rmn{pp}$
+allows us to relate $\tau_\rmn{cl} \propto X_\rmn{tu}^2 \propto k_0$
+that ultimately sets the normalization for $D_\rmn{pp}$. We also
+exploit the large uncertainty in the turbulent profile and adjust
+$\alpha_\rmn{tu}$ for each model so that the CRs have the correct
+spatial profile to match the radio emission. The shape of the spectrum
+for each of model is more complicated and is determined both from
+reacceleration and as well as the gains and losses during the
+formation of the cluster. It depends only weakly on the specifics of
+the CR injection at the shocks (where the Mach number distribution of
+the shocks is the most important quantity). The normalization of the
+spectrum is mainly determined from the maximum acceleration efficiency
+(together with the uncertain parameters $X_\rmn{tu}$, $\tau_\rmn{cl}$,
+and $k_0$). Given the freedom in the turbulens, it might not be
+surprising that we match the radio profile in Coma. Although, matching
+the spectrum without violating gamma-ray bounds for each of our three
+models is more surprising and is not a consequence of parameter
+fitting. We believe that it is ultimately a consequence of the adopted
+physics and hint that reacceleration is a viable explanation for giant
+radio halos. Below we discuss in more detail the different emission
+components of Coma.
 
 \subsection{Gamma-rays}
 After turbulent reacceleration, the volume-weighted, relative CRp
@@ -947,11 +969,11 @@ different simulated clusters.
 While the radio surface brightness has an approximate linear
 dependence on the acceleration efficiency, it has a strong non-linear
 dependence on the level of compressible turbulence. Below a critical
-level ($X_\rmn{thres,tu} = 
-\frac{400\,\rmn{Myrs}}{\tau_\rmn{cl}} X_\rmn{tu}\approx 0.04$ in our fiducial model),
-turbulent reacceleration is negligible, while it rises sharply above
-this threshold. For instance, for $X_\rmn{tu}\gtrsim0.04$, a factor 2 change
-in $X_\rmn{tu}$ changes the radio surface brightness by $\sim
+level ($X_\rmn{thres,tu} = \frac{400\,\rmn{Myrs}}{\tau_\rmn{cl}}
+X_\rmn{tu}\approx 0.04$ in our fiducial model), turbulent
+reacceleration is negligible, while it rises sharply above this
+threshold. For instance, for $X_\rmn{tu}\gtrsim0.04$, a factor 2
+change in $X_\rmn{tu}$ changes the radio surface brightness by $\sim
 10-100$. In principle this threshold behavior allows us to provide a
 strict lower bound on turbulence in radio halos. An even more
 stringent bound on $X_\rmn{tu}$ can be inferred from combining radio
@@ -964,11 +986,11 @@ to reproduce the radio observations. However, since the turbulent
 reacceleration acts on both the secondary CRes and the CRps, while
 $\zeta_\rmn{p}$ only affects the CRps, these models would produce too
 much gamma-rays. Hence we conclude that $X_\rmn{tu}\gtrsim0.06$ if all
-other parameters are kept fixed. \AP{Although, we caution the reader
-  to take this limit too stringent since there are degeneracies between
-  the uncertain parameters
-  $X_\rmn{tu}\propto\sqrt{\tau_\rmn{D}}\propto \sqrt{k_0}$.} We will
-explore this parameter space further in future work.
+other parameters are kept fixed. Although, we caution the reader to
+take this limit too stringent since there are degeneracies between the
+uncertain parameters $X_\rmn{tu}\propto\sqrt{\tau_\rmn{D}}\propto
+\sqrt{k_0}$. We will explore this parameter space further in future
+work.
 
 \begin{figure*}
   \includegraphics[width=1.0\columnwidth]{sync.spec.pri.g72a.140.v6.eps}
